[gd_scene load_steps=21 format=3 uid="uid://fxwwwabbrtv"]

[ext_resource type="Script" uid="uid://5jsevxsehuo8" path="res://src/player/player.gd" id="1_1txc5"]
[ext_resource type="Script" uid="uid://bh6wq1q5fxuey" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="1_r66lb"]
[ext_resource type="Script" uid="uid://boel5hma2thn2" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="2_1txc5"]
[ext_resource type="Script" uid="uid://dnai1tqqessum" path="res://src/player/player_camera_rig.gd" id="2_ht1c8"]
[ext_resource type="Script" uid="uid://p3rffxq11yq4" path="res://src/camera_shake.gd" id="5_u51tk"]
[ext_resource type="Script" uid="uid://dj5wa11rc1q6d" path="res://src/player/interaction_system.gd" id="6_g2jcq"]
[ext_resource type="Script" uid="uid://cbjrdq7ived0u" path="res://addons/phantom_camera/scripts/resources/camera_3d_resource.gd" id="6_u51tk"]
[ext_resource type="Script" uid="uid://ckfxwo28lrgnu" path="res://addons/OvaniAmbiencePlugin/AmbienceListener.gd" id="8_kbsxf"]
[ext_resource type="Script" uid="uid://cwfd25cby8bo8" path="res://src/foostep_controller.gd" id="9_rgeog"]
[ext_resource type="AudioStream" uid="uid://d0gyailrfb2eq" path="res://audio/player/Shoe Step Stone Medium A.wav" id="10_llb5v"]
[ext_resource type="AudioStream" uid="uid://b5d2kh8ndjr16" path="res://audio/player/Shoe Step Stone Medium B.wav" id="11_x0bak"]
[ext_resource type="AudioStream" uid="uid://ws0qvgypoutw" path="res://audio/player/Shoe Step Stone Medium C.wav" id="12_lulei"]
[ext_resource type="AudioStream" uid="uid://um3sym0aq8bd" path="res://audio/player/Shoe Step Stone Medium D.wav" id="13_edtk3"]
[ext_resource type="AudioStream" uid="uid://cdnwl868wxhna" path="res://audio/player/Shoe Step Stone Medium E.wav" id="14_q2wkl"]
[ext_resource type="Script" uid="uid://dih3swr18jk1u" path="res://addons/OvaniAmbiencePlugin/MovingAudioSource.gd" id="15_x0bak"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7dm0k"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_u51tk"]
noise_type = 3
frequency = 1.0
fractal_type = 0

[sub_resource type="Resource" id="Resource_g2jcq"]
script = ExtResource("2_1txc5")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_kbsxf"]
script = ExtResource("6_u51tk")
cull_mask = 1048575
h_offset = 0.0
v_offset = 0.0
projection = 0
fov = 75.0
size = 1.0
frustum_offset = Vector2(0, 0)
near = 0.05
far = 4000.0
metadata/_custom_type_script = "uid://cbjrdq7ived0u"

[sub_resource type="SphereShape3D" id="SphereShape3D_g2jcq"]
radius = 0.099

[node name="Player" type="CharacterBody3D"]
physics_interpolation_mode = 1
collision_layer = 2
script = ExtResource("1_1txc5")
move_speed = 3.5
move_smoothing_accel = 0.125
move_smoothing_decel = 0.25

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_7dm0k")

[node name="PlayerCameraRig" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("2_ht1c8")

[node name="CameraShake" type="Node3D" parent="PlayerCameraRig" node_paths=PackedStringArray("pcam")]
unique_name_in_owner = true
script = ExtResource("5_u51tk")
pcam = NodePath("PhantomCamera3D")
noise = SubResource("FastNoiseLite_u51tk")
rotation_scale_x = 10.0
rotation_scale_y = 10.0
rotation_scale_z = 10.0
position_scale_x = 0.075
position_scale_y = 0.075
position_scale_z = 0.075

[node name="PhantomCamera3D" type="Node3D" parent="PlayerCameraRig/CameraShake"]
unique_name_in_owner = true
script = ExtResource("1_r66lb")
priority = 1
tween_resource = SubResource("Resource_g2jcq")
tween_on_load = false
camera_3d_resource = SubResource("Resource_kbsxf")
_preview_noise = false
metadata/_custom_type_script = "uid://bh6wq1q5fxuey"

[node name="ItemPickupTargetStart" type="Node3D" parent="PlayerCameraRig"]
transform = Transform3D(0.984808, -0.0151344, -0.172987, 0, 0.996195, -0.0871557, 0.173648, 0.0858316, 0.98106, 0, 0, -0.5)

[node name="ItemPickupTargetEnd" type="Node3D" parent="PlayerCameraRig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -0.5)

[node name="InteractionSystem" type="Node3D" parent="."]
script = ExtResource("6_g2jcq")
reach_distance = 3.0
blocker_mask = 4278190081
interactable_mask = 4278190084
sphere_shape = SubResource("SphereShape3D_g2jcq")

[node name="AmbienceListener" type="Node" parent="."]
script = ExtResource("8_kbsxf")
metadata/_custom_type_script = "uid://ckfxwo28lrgnu"

[node name="FootstepController" type="Node3D" parent="." node_paths=PackedStringArray("footstep_sfx")]
script = ExtResource("9_rgeog")
footstep_distance = 1.3
pitch_variation = 0.1
footstep_audio = Array[AudioStream]([ExtResource("10_llb5v"), ExtResource("11_x0bak"), ExtResource("12_lulei"), ExtResource("13_edtk3"), ExtResource("14_q2wkl")])
footstep_sfx = NodePath("FootstepSFX")
metadata/_custom_type_script = "uid://cwfd25cby8bo8"

[node name="FootstepSFX" type="AudioStreamPlayer3D" parent="FootstepController"]
attenuation_model = 3
volume_db = -6.0

[node name="MovingAudioSource" type="Node3D" parent="FootstepController/FootstepSFX"]
script = ExtResource("15_x0bak")
metadata/_custom_type_script = "uid://dih3swr18jk1u"
